--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="scripts/Magnific-Popup/dist/magnific-popup.css"
-    />
+    <link rel="stylesheet" href="scripts/magnific-popup.css" />
     <link rel="stylesheet" href="style.css?v=1" />
     <link rel="icon" type="image/x-icon" href="img/favicon.png" />
   </head>
@@ -530,7 +527,7 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <script src="scripts/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
+    <script src="scripts/jquery.magnific-popup.min.js"></script>
     <script src="scripts/main.js?v=1"></script>
   </body>
 </html>
